# intentproof-sdk-python

./: .gitignore  .gitlab-ci.yml  .gitleaks.toml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  conformance-certificate.json  conformance-report.json  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/actions/setup-python-pip/: action.yml
.github/workflows/: ci.yml  codeql.yml  conformance-attestation.yml  deps-scan.yml  release-pypi.yml  release-signing-dry-run.yml  release.yml  spec-conformance.yml
scripts/: README-coverage-tiers.md  check-consumer-spec-pin.sh  check-coverage.sh  check-coverage_critical_prefix_test.sh  check-coverage_path_test.sh  check-no-bundled-schema.sh  check-no-handwritten-model-types.sh  check-sdk-signing-fixtures-sync.sh  check-sdk-spec-pin.sh  check-source-ref.sh  coverage-tiers.conf  generate_schema_models.py  run-coverage-gate.sh  spec-conformance.sh  verify-generated-types.sh
src/intentproof/: __init__.py  _correlation.py  _time.py  _version.py  _wire.py  canon.py  client.py  exporter.py  exporters.py  http_exporter.py  instrumentation.py  keys.py  outbox.py  schema_validate.py  sdk.py  signing.py  snapshot.py  types.py  validation.py
tests/: __init__.py  conftest.py  spec_semantics.py  test_async_wrap.py  test_canon.py  test_e2e_local_loop.py  test_exporter.py  test_exporter_edges.py  test_keys.py  test_keys_edges.py  test_outbox.py  test_sdk.py  test_signing_edges.py
tests/fixtures/: policy_body_canon.json
tests/unit/: test_correlation.py  test_exporters.py  test_generated_fingerprint.py  test_schema_validate.py  test_sdk.py  test_snapshot.py  test_spec_golden_conformance.py  test_time_wire_version.py  test_validation.py
tests/workflow/: test_proof_pipeline.py
