[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intentproof-sdk-python"
version = "0.1.0"
description = "Python SDK for IntentProof"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "cryptography>=42.0.0",
    "ulid-py>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["intentproof"]
omit = []

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_empty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--cov=intentproof",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]
